perf(command): reduce per-execution overhead in command dispatch
Several optimizations to executeCommand and its supporting methods,
aimed at high-throughput command dispatch under concurrent load:

- Replace instanceof UserHandler branching with commandSender.isConsole(),
  letting senders self-describe via polymorphic dispatch instead of
  requiring CommandManager to know about concrete sender types.
- Skip permission and cooldown handling entirely for console senders,
  since console is implicitly trusted and not subject to cooldowns.
- Skip cooldown resolution/application entirely when a command has no
  configured cooldown (cooldownTime() == 0), avoiding unnecessary map
  lookups and setter calls on every execution.
- Cache resolved cooldown durations per executor class (cooldownCache)
  instead of recomputing the time-unit conversion and reassigning the
  cooldown value on every single command call.
- Replace List.of(split(...)) with Arrays.asList(split(...)) for
  command arguments, avoiding the extra defensive array copy List.of
  performs over an array that's already freshly allocated and not
  shared elsewhere.
- Fix disableCommand(String) to lowercase the lookup key, matching how
  commands are stored on registration; previously, removing a command
  by any non-lowercase name silently failed.

No public API changes. Existing behavior for permission checks,
cooldown enforcement, and command execution is preserved.